--- a/app/src/main/res/drawable/diagonal_drawable.xml
+++ b/app/src/main/res/drawable/diagonal_drawable.xml
@@ -3,7 +3,7 @@
 
     <item>
         <shape android:shape="rectangle" >
-            <solid android:color="@color/black_color" />
+            <solid android:color="@color/colorPrimaryDark" />
             <padding
                 android:top="2dp"
                 android:left="2dp"
@@ -12,7 +12,7 @@
                 />
 
             <corners
-                android:radius="2dp"
+                android:radius="5dp"
                 />
 
 
@@ -20,39 +20,23 @@
         </shape>
     </item>
     <!-- Colored rectangle make another gradient with corners-->
-    <item android:drawable="@drawable/gradient_bg"
+    <item >
 
-        >
+    <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
+
+        <gradient
+            android:endColor="#cecece"
+            android:gradientRadius="1200"
+            android:startColor="#eeeeee"
+            android:centerX="50%"
+            android:centerY="50%"
+            android:type="radial" >
+        </gradient>
+
+        <corners
+            android:radius="4dp"/>
+
+    </shape>
     </item>
 
-    <item
-        android:top="20dp"
-        android:bottom="-5dp"
-        android:right="15dp">
-        <rotate
-            android:fromDegrees="-60">
-            <shape android:shape="rectangle">
-                <solid android:color="@color/black_color" />
-                <padding
-                    android:top="2dp"
-                    android:left="2dp"
-                    android:right="2dp"
-                    android:bottom="2dp"
-                    />
-            </shape>
-        </rotate>
-    </item>
-    <!-- Overlay with same color as background-->
-    <item
-        android:top="20dp"
-        android:bottom="-5dp"
-        android:right="15dp">
-        <rotate
-            android:fromDegrees="-60">
-            <shape android:shape="rectangle">
-                <solid android:color="@color/white" />
-
-            </shape>
-        </rotate>
-    </item>
 </layer-list>
