--- a/app/src/main/res/layout/drawer_layout_navigation.xml
+++ b/app/src/main/res/layout/drawer_layout_navigation.xml
@@ -18,25 +18,23 @@
 
 
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/imvProfilePic"
-            android:layout_width="70dp"
+            android:layout_width="80dp"
+            android:layout_height="75dp"
             android:src="@drawable/profile_pic"
-            android:layout_height="65dp"
-            android:background="@drawable/profile_bg"
-            android:layout_margin="@dimen/margin_10"
-            />
-
+            android:layout_margin="@dimen/margin_5"
+            app:civ_border_color="@color/white"
+            app:civ_border_width="1dp" />
         <TextView
             android:id="@+id/txvUserName"
             android:layout_width="match_parent"
             android:layout_marginTop="@dimen/padding_23"
-            android:layout_marginLeft="@dimen/padding_10"
-            android:layout_marginStart="@dimen/padding_10"
+            android:layout_marginLeft="@dimen/padding_7"
+            android:layout_marginStart="@dimen/padding_7"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:typeface="serif"
-            android:text="Shubham Lamba"
             android:layout_toRightOf="@id/imvProfilePic"
             android:layout_toEndOf="@id/imvProfilePic"
             android:textSize="@dimen/profile_name"
@@ -47,8 +45,8 @@
         <TextView
             android:id="@+id/txvUserEmail"
             android:layout_width="match_parent"
-            android:layout_marginLeft="@dimen/padding_10"
-            android:layout_marginStart="@dimen/padding_10"
+            android:layout_marginLeft="@dimen/padding_7"
+            android:layout_marginStart="@dimen/padding_7"
             android:layout_height="wrap_content"
             android:typeface="monospace"
             android:layout_marginTop="@dimen/margin_7"
