--- a/app/src/main/res/layout/fragment_my_points.xml
+++ b/app/src/main/res/layout/fragment_my_points.xml
@@ -2,84 +2,128 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.iqmojo.iq_mojo.ui.fragments.MyPointsFragment"
-    android:background="@drawable/grey_gradient_bg">
+    android:background="@drawable/grey_gradient_bg"
+    tools:context="com.iqmojo.iq_mojo.ui.fragments.MyPointsFragment">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginTop="@dimen/margin_30dp">
 
-        <ImageView
-            android:id="@+id/img_profile_pic"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/profile_pic"/>
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="@dimen/padding_30"
+            android:id="@+id/llyProfile"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/text_name"
-            android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:weightSum="10">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="5"
+                    android:background="@color/grey_text_color" />
+
+                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/profile_image"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/profile_pic"
+                    app:civ_border_color="@color/grey_text_color"
+                    app:civ_border_width="1dp" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:layout_weight="5"
+                    android:background="@color/grey_text_color" />
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/text_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10"
+                android:text="Ramesh Kumar"
+                android:textSize="@dimen/profile_name_text_size"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/text_rupees"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_7"
+                android:drawableLeft="@drawable/pager_00_inactive"
+                android:drawablePadding="@dimen/margin_5"
+                android:text="125.26"
+                android:textSize="@dimen/profile_name"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/text_avail_bal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_10"
+                android:text="@string/avail_bal"
+                android:textSize="@dimen/form_textsize"
+                android:typeface="monospace" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_21sp"
-            android:layout_marginTop="@dimen/margin_7"
-            android:text=""
-            />
-
-        <TextView
-            android:id="@+id/text_rupees"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin_7"
-            android:textSize="@dimen/text_size_18sp"
-            android:drawablePadding="@dimen/margin_5"
-            android:drawableLeft="@drawable/pager_00_inactive"
-            android:text="125.26"/>
-
-        <TextView
-            android:id="@+id/text_avail_bal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_15sp"
-            android:text="@string/avail_bal"
-            android:layout_marginTop="@dimen/margin_10"
-            />
-
-    </LinearLayout>
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_below="@id/llyProfile"
+            android:orientation="vertical">
 
 
+            <TextView
+                android:id="@+id/btn_paytm"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="55dp"
+                android:typeface="monospace"
+                android:background="@drawable/diagonal_drawable"
+                android:elevation="@dimen/padding_3"
+                android:gravity="center"
+                android:maxWidth="300dp"
+                android:paddingLeft="@dimen/margin_30dp"
+                android:paddingRight="@dimen/margin_30dp"
+                android:drawablePadding="@dimen/margin_20"
+                android:drawableLeft="@drawable/iqmojo_toolbar"
+                android:text="Paytm Cash"
+                android:textColor="@color/dark_grey_text"
+                android:textSize="@dimen/form_textsize" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_marginBottom="@dimen/margin_30dp">
+            <TextView
+                android:id="@+id/btn_bank"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="55dp"
+                android:typeface="monospace"
+                android:maxWidth="300dp"
+                android:background="@drawable/diagonal_drawable"
+                android:elevation="@dimen/padding_3"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/margin_20"
+                android:paddingLeft="@dimen/margin_30dp"
+                android:paddingRight="@dimen/margin_30dp"
+                android:drawablePadding="@dimen/margin_20"
+                android:drawableLeft="@drawable/iqmojo_toolbar"
+                android:text="@string/bankAccount"
+                android:textColor="@color/dark_grey_text"
+                android:textSize="@dimen/form_textsize" />
 
-        <Button
-            android:id="@+id/btn_paytm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_21sp"
-            android:background="@drawable/get_otp_bg"
-            android:textColor="#fff"
-            android:text="Paytm"/>
 
-        <Button
-            android:id="@+id/btn_bank"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/text_size_21sp"
-            android:layout_marginTop="@dimen/margin_10"
-            android:background="@drawable/get_otp_bg"
-            android:textColor="#fff"
-            android:text="@string/bankAccount"
-            />
 
-    </LinearLayout>
+        </LinearLayout>
 
 </RelativeLayout>
