--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="profile_name_text_size">24sp</dimen>
     <dimen name="profile_name">22sp</dimen>
     <dimen name="drawer_text_size">18sp</dimen>
+    <dimen name="button_width">230dp</dimen>
+    <dimen name="progress_radius">16dp</dimen>
 </resources>
