--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -6,6 +6,8 @@
     <dimen name="profile_name_text_size">24sp</dimen>
     <dimen name="profile_name">22sp</dimen>
     <dimen name="drawer_text_size">20sp</dimen>
+    <dimen name="button_width">270dp</dimen>
+    <dimen name="progress_radius">11dp</dimen>
 
 
 </resources>
