Completed quiz session flow

--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -316,6 +316,7 @@
                     android:paddingLeft="@dimen/padding_50"
                     android:paddingRight="@dimen/padding_50"
                     android:text="SUBMIT"
+                    android:layout_marginBottom="@dimen/margin_40dp"
                     android:textColor="@color/white"
                     android:textSize="@dimen/form_textsize"
                     android:typeface="sans"
