--- a/app/src/main/res/values-mdpi/dimens.xml
+++ b/app/src/main/res/values-mdpi/dimens.xml
@@ -7,5 +7,6 @@
     <dimen name="profile_name">17sp</dimen>
     <dimen name="drawer_text_size">15sp</dimen>
     <dimen name="button_width">170dp</dimen>
+    <dimen name="question_view_height">60dp</dimen>
 
 </resources>
