--- a/app/src/main/res/layout/activity_game_entry_fee.xml
+++ b/app/src/main/res/layout/activity_game_entry_fee.xml
@@ -38,7 +38,7 @@
                 app:cardPreventCornerOverlap="false">
 
                 <ImageView
-                    android:id="@+id/merchantCardImage"
+                    android:id="@+id/imvQuestionImage"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -121,6 +121,7 @@
                 android:layout_marginLeft="@dimen/margin_40dp"
                 android:layout_marginRight="@dimen/margin_40dp"
                 android:layout_marginTop="@dimen/margin_20"
+                android:layout_marginBottom="@dimen/margin_20"
                 android:background="@drawable/red_gradient_rounded_bg"
                 android:elevation="@dimen/padding_3"
                 android:gravity="center"
