--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -9,5 +9,6 @@
     <dimen name="drawer_text_size">16sp</dimen>
     <dimen name="button_width">200dp</dimen>
     <dimen name="progress_radius">19dp</dimen>
+    <dimen name="question_view_height">80dp</dimen>
 
 </resources>
