--- a/app/src/main/res/values-ldpi/dimens.xml
+++ b/app/src/main/res/values-ldpi/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="profile_name_text_size">18sp</dimen>
     <dimen name="profile_name">16sp</dimen>
     <dimen name="drawer_text_size">14sp</dimen>
+    <dimen name="question_view_height">50dp</dimen>
 </resources>
