Completed quiz session flow

--- a/app/src/main/res/layout/activity_play_question.xml
+++ b/app/src/main/res/layout/activity_play_question.xml
@@ -148,11 +148,12 @@
                     android:id="@+id/txvQuestion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="45dp"
+                    android:layout_marginTop="60dp"
                     android:gravity="center"
+                    android:paddingLeft="@dimen/padding_15"
+                    android:paddingRight="@dimen/padding_15"
                     android:lineSpacingMultiplier="1.3"
-                    android:padding="@dimen/padding_15"
-                    android:lines="3"
+                    android:lines="4"
                     android:textColor="@color/colorPrimaryDark"
                     android:textSize="@dimen/profile_name_text_size"
                     android:typeface="monospace" />
