--- a/app/src/main/res/layout/activity_game_result.xml
+++ b/app/src/main/res/layout/activity_game_result.xml
@@ -10,26 +10,150 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true" />
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_below="@+id/toolbar"
-        android:background="@drawable/grey_gradient_bg"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:background="@color/white"
+        android:fillViewport="true"
+        android:paddingTop="@dimen/margin_15">
 
-        <TextView
-            android:id="@+id/txvResult"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:typeface="monospace"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/padding_30"
-            android:paddingStart="@dimen/padding_30"
-            android:textSize="@dimen/form_textsize"
-            android:layout_gravity="center"
-            android:lineSpacingMultiplier="1.3"
-            android:textColor="@color/black_color"/>
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/cardBackground"
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:layout_margin="@dimen/margin_10"
+                android:background="@color/transparent"
+                app:cardBackgroundColor="@color/grey_text_color"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="@dimen/margin_2"
+                app:cardPreventCornerOverlap="false">
+
+                <ImageView
+                    android:id="@+id/imvQuestionImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:adjustViewBounds="true"
+                    android:background="@null"
+                    android:gravity="center"
+                    android:padding="@dimen/margin_5"
+                    android:scaleType="fitCenter" />
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:id="@+id/txvResp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_15"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginRight="@dimen/margin_15"
+                android:layout_marginStart="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_10"
+                android:text="Game Stats: "
+                android:lineSpacingMultiplier="1.3"
+                android:textColor="@color/black_color"
+                android:textSize="@dimen/drawer_text_size"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/txvRespExtended"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_15"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginRight="@dimen/margin_15"
+                android:layout_marginStart="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_15"
+                android:visibility="visible"
+                android:lineSpacingMultiplier="1.3"
+                android:textColor="@color/grey_text_color"
+                android:textSize="@dimen/form_textsize"
+                android:typeface="monospace" />
+
+            <TextView
+                android:id="@+id/txStatsLabel"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_15"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginRight="@dimen/margin_15"
+                android:layout_marginStart="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_30dp"
+                android:text="Game Stats: "
+                android:lineSpacingMultiplier="1.3"
+                android:textColor="@color/black_color"
+                android:textSize="@dimen/form_textsize"
+                android:typeface="monospace" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="@dimen/margin_15"
+                android:layout_marginLeft="@dimen/margin_15"
+                android:layout_marginRight="@dimen/margin_15"
+                android:layout_marginStart="@dimen/margin_15"
+                android:layout_marginTop="@dimen/margin_20"
+                >
+                <TextView
+                    android:id="@+id/txvTotalQ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total Questions"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/grey_text_color"
+                    android:textSize="@dimen/expiry_text_size"
+                    android:typeface="monospace" />
+                <TextView
+                    android:id="@+id/txvTotalQValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/txvTotalQ"
+                    android:layout_toEndOf="@id/txvTotalQ"
+                    android:text="34"
+                    android:layout_marginLeft="@dimen/padding_50"
+                    android:layout_marginStart="@dimen/padding_50"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/grey_text_color"
+                    android:textSize="@dimen/expiry_text_size"
+                    android:typeface="monospace" />
+                <TextView
+                    android:id="@+id/txvCorrectQ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Correct Answers"
+                    android:layout_marginTop="@dimen/margin_5"
+                    android:layout_below="@id/txvTotalQ"
+                    android:lineSpacingMultiplier="1.3"
+                    android:textColor="@color/grey_text_color"
+                    android:textSize="@dimen/expiry_text_size"
+                    android:typeface="monospace" />
+                <TextView
+                    android:id="@+id/txvCorrectQValue"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@id/txvCorrectQ"
+                    android:layout_toRightOf="@id/txvCorrectQ"
+                    android:layout_toEndOf="@id/txvCorrectQ"
+                    android:text="78"
+                    android:lineSpacingMultiplier="1.3"
+                    android:layout_alignStart="@id/txvTotalQValue"
+                    android:layout_alignLeft="@id/txvTotalQValue"
+                    android:textColor="@color/grey_text_color"
+                    android:textSize="@dimen/expiry_text_size"
+                    android:typeface="monospace" />
+            </RelativeLayout>
 
 
+
+        </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
