--- a/app/src/main/res/layout/activity_game_details.xml
+++ b/app/src/main/res/layout/activity_game_details.xml
@@ -129,7 +129,7 @@
 
 
             <TextView
-                android:id="@+id/txvPlay"
+                android:id="@+id/txvResume"
                 android:layout_width="wrap_content"
                 android:layout_height="45dp"
                 android:layout_below="@+id/txvTnC"
@@ -138,6 +138,28 @@
                 android:background="@drawable/red_gradient_rounded_bg"
                 android:elevation="@dimen/padding_5"
                 android:gravity="center"
+                android:minWidth="230dp"
+                android:paddingLeft="@dimen/padding_45"
+                android:paddingRight="@dimen/padding_45"
+                android:text="RESUME GAME"
+                android:textColor="@color/white"
+                android:textSize="@dimen/form_textsize"
+                android:typeface="sans"
+                android:visibility="gone" />
+            <TextView
+                android:id="@+id/txvPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:minWidth="230dp"
+                android:layout_below="@+id/txvResume"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="@dimen/margin_20"
+                android:layout_marginBottom="@dimen/margin_30dp"
+                android:background="@drawable/red_gradient_rounded_bg"
+                android:elevation="@dimen/padding_5"
+                android:layout_alignStart="@id/txvResume"
+                android:layout_alignLeft="@id/txvResume"
+                android:gravity="center"
                 android:paddingLeft="@dimen/padding_45"
                 android:paddingRight="@dimen/padding_45"
                 android:text="PLAY AGAIN"
@@ -145,6 +167,8 @@
                 android:textSize="@dimen/form_textsize"
                 android:typeface="sans"
                 android:visibility="visible" />
+
+
 
 
         </RelativeLayout>
