--- a/app/src/main/res/layout/activity_play_question.xml
+++ b/app/src/main/res/layout/activity_play_question.xml
@@ -34,7 +34,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:gravity="center"
-                android:text="56"
                 android:textColor="@color/black_color"
                 android:textSize="@dimen/profile_name_text_size"
                 android:typeface="serif" />
@@ -64,7 +63,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:gravity="center"
-                android:text="56"
                 android:textColor="@color/black_color"
                 android:textSize="@dimen/profile_name_text_size"
                 android:typeface="serif" />
@@ -94,7 +92,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/margin_10"
                 android:gravity="center"
-                android:text="56"
                 android:textColor="@color/black_color"
                 android:textSize="@dimen/profile_name_text_size"
                 android:typeface="serif" />
@@ -144,11 +141,22 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <ImageView
+                    android:id="@+id/imvPause"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/padding_5"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:layout_marginRight="@dimen/margin_10"
+                    android:layout_marginEnd="@dimen/margin_10"
+                    android:layout_gravity="end"
+                    android:src="@drawable/iq_pause"/>
+
                 <com.iqmojo.base.ui.widgets.AutoResizeTextView
                     android:id="@+id/txvQuestion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="60dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:paddingLeft="@dimen/padding_15"
                     android:paddingRight="@dimen/padding_15"
