--- a/app/src/main/res/layout/fragment_my_transactions.xml
+++ b/app/src/main/res/layout/fragment_my_transactions.xml
@@ -130,10 +130,11 @@
 
    <ListView
        android:id="@+id/listCredit"
+       android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
-       android:layout_marginRight="@dimen/margin_30dp"></ListView>
+       android:layout_marginRight="@dimen/margin_30dp"/>
 
 
    <RelativeLayout
@@ -193,7 +194,7 @@
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_30dp"
-       android:layout_marginRight="@dimen/margin_30dp"></ListView>
+       android:layout_marginRight="@dimen/margin_30dp"/>
 
 
 </LinearLayout>
